refactor: 영화 관련 정보를 repository가 아닌 service에서 가져오도록 수정